<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ravenlair_title">Pixel\'s Den</string>
    <string name="ravenlair_summary">Your Dessert Here</string>
    <string name="dialog_team_title">The team</string>
    <string name="leaddeveloper_title">Lead Developer</string>
    <string name="developer_title">Developer</string>
    <string name="maintainer_title">Maintainer</string>
    <string name="contributor_title">Contributor</string>
    <string name="graphicsdesigner_title">Graphics Designer</string>
    <string name="navigation_system_title">System</string>
    <string name="navigation_lockscreen_title">Lockscreen</string>
    <string name="navigation_statusbar_title">Statusbar</string>
    <string name="navigation_hardware_title">Hardware</string>
    <string name="navigation_multitasking_title">Multitasking</string>
    <string name="statusbar_icon">Statusbar Icon</string>
    <string name="lockscreen_gestures">Lockscreen Gestures</string>
    <string name="statusbar_gestures">Status Bar Gestures</string>
    <string name="misc">Miscellaneous</string>
    <string name="buttons">Buttons</string>
    <string name="qs">Quick Settings</string>
    <string name="lockscreen_security">Lockscreen Security</string>
    <string name="heads_up">Heads Up Customisation</string>
    <string name="vol_buttons">Volume Buttons</string>
    <string name="statusbar_clock">Clock Customisations</string>
    <string name="statusbar_battery">Battery Icon</string>
    <string name="gestures_title">Nav Bar Gesture Customisations</string>
    <string name="gestures_summary">Take Your Pill</string>
    <string name="ambient_settings">Ambient Settings</string>
    <string name="show_fourg_title">Show 4G instead of LTE</string>
    <string name="show_fourg_summary">Replaces LTE statusbar indicators with 4G</string>
    <string name="volte_switch_title">VoLTE icon</string>
    <string name="volte_switch_summary">Display VoLTE icon</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="volte_icon_style_title">Select VoLTE Icon</string>
    <string name="volte_icon_asus">VoLTE Asus Icon</string>
    <string name="volte_icon_vo">Vo Only Icon</string>
    <string name="volte_icon_volte">VoLTE Icon</string>
    <string name="volte_icon_oos">VoLTE OOS Icon</string>
    <string name="volte_icon_hd">HD Icon</string>
    <string name="volte_icon_hd2">HD CAF Icon</string>
    <string name="volte_icon_miui">MIUI 11</string>
    <string name="volte_icon_emui">EMUI</string>
    <string name="volte_icon_oss">OOS 10</string>
    <string name="volte_icon_volit">Volit Icon</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_enabled">VoWiFi icon enabled</string>
    <string name="vowifi_icon_disabled">VoWiFi icon disabled</string>
    <string name="vowifi_icon_enabled_volte_disabled">VoWiFi instead of VoLTE icon</string>
    <string name="vowifi_icon_style_title">VoWiFi icon style</string>
    <string name="vowifi_icon_default">Default Icon</string>
    <string name="vowifi_icon_emui">EMUI Icon</string>
    <string name="vowifi_icon_asus">Asus Icon</string>
    <string name="vowifi_icon_oneplus">OOS Icon</string>
    <string name="vowifi_icon_moto">Motorola Icon</string>
    <string name="vowifi_icon_simple1">Simple1 Icon</string>
    <string name="vowifi_icon_simple2">Simple2 Icon</string>
    <string name="vowifi_icon_simple3">Simple3 Icon</string>
    <string name="double_tap_to_sleep_title">Status bar double tap to sleep</string>
    <string name="double_tap_to_sleep_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="double_tap_sleep_lockscreen_title">Lockscreen double tap to sleep</string>
    <string name="double_tap_sleep_lockscreen_summary">Double tap anywhere on the lockscreen to put the device to sleep</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="torch_long_press_power_gesture_title">Screen off power button torch</string>
    <string name="torch_long_press_power_gesture_desc">Long press power button while the screen is off to turn on the flashlight</string>
    <string name="torch_long_press_power_timeout_title">Automatically turn torch off</string>
    <string name="torch_long_press_power_timeout_never">Never</string>
    <string name="torch_long_press_power_timeout_1min">1 minute</string>
    <string name="torch_long_press_power_timeout_2min">2 minutes</string>
    <string name="torch_long_press_power_timeout_5min">5 minutes</string>
    <string name="torch_long_press_power_timeout_10min">10 minutes</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="fp_unlock_keystore_title">Force FP authentication</string>
    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot or lockdown</string>
    <string name="fod_recog_animation">FOD recognizing animation</string>
    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
    <string name="fod_recog_animation_effect_title">Recognizing animation effect</string>
    <string name="fod_recog_animation_miui_normal">MIUI default</string>
    <string name="fod_recog_animation_miui_aod">MIUI AOD</string>
    <string name="fod_recog_animation_miui_aurora">Aurora (K30 Pro)</string>
    <string name="fod_recog_animation_miui_aurora_cas">Aurora (Mi 10 Ultra)</string>
    <string name="fod_recog_animation_miui_light">Light</string>
    <string name="fod_recog_animation_miui_pop">Pop</string>
    <string name="fod_recog_animation_miui_pulse">Pulse</string>
    <string name="fod_recog_animation_miui_pulse_white">Pulse (White)</string>
    <string name="fod_recog_animation_miui_rhythm">Rhythm</string>
    <string name="fod_recog_animation_miui_star_cas">Starlight</string>
    <string name="fod_recog_animation_op_cosmos">Cosmos</string>
    <string name="fod_recog_animation_op_energy">Energy</string>
    <string name="fod_recog_animation_op_mclaren">McLaren</string>
    <string name="fod_recog_animation_op_ripple">Ripple</string>
    <string name="fod_recog_animation_op_scanning">Scanning (Cyberpunk 2077)</string>
    <string name="fod_recog_animation_op_stripe">Stripe</string>
    <string name="fod_recog_animation_op_wave">Wave</string>
    <string name="fod_recog_animation_pureview_dna">DNA</string>
    <string name="fod_recog_animation_pureview_future">Future</string>
    <string name="fod_recog_animation_pureview_halo_ring">Halo ring</string>
    <string name="fod_recog_animation_pureview_molecular">Molecular</string>
    <string name="fod_recog_animation_rog_fusion">Fusion</string>
    <string name="fod_recog_animation_rog_pulsar">Pulsar</string>
    <string name="lockscreen_media_art_title">Display media cover art</string>
    <string name="lockscreen_media_art_summary">Show current playing media\'s album art on lockscreen</string>
    <string name="notification_sound_vib_screen_on_title">Notification sound if active</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="volume_panel">Volume panel style</string>
    <string name="volume_panel_stock_val" translatable="false">com.android.systemui.volume</string>
    <string name="fod_title">FOD Customisations</string>
    <string name="fod_summary">Customize Your Fingerprint on Display</string>
    <string name="battery_percent_title">Statusbar battery indicator</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_position">Date position</string>
    <string name="qs_columns_rows_category_title">QS columns and rows</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
    <string name="lockscreen_visualizer_title">Display music visualizer</string>
    <string name="click_partial_screenshot_title">Click to partial screenshot</string>
    <string name="click_partial_screenshot_summary">Short click Volume Down and Power to take partial screenshot</string>
    <string name="lock_screen_custom_clock_face_category">Lockscreen Clock</string>
    <string name="lock_screen_custom_clock_face_title">Lockscreen clock style</string>
    <string name="lockscreen_charging_animation_title">LS Charging animation</string>
    <string name="hide_lockicon_title">Hide lock icon</string>
    <string name="hide_lockicon_summary">Hide the lock icon on lockscreen</string>
    <string name="lockscreen_status_bar_title">Status bar</string>
    <string name="lockscreen_status_bar_summary">Display status bar on the lockscreen</string>
    <string name="always_on_display_schedule_title">Always on display schedule</string>
    <string name="ambient_icons_lockscreen_title">AOD icons on lock screen</string>
    <string name="ambient_icons_lockscreen_summary">Replace notifications with AOD icons</string>
    <string name="ambient_icons_size_title">AOD icons size</string>
    <string name="ambient_icons_color_title">AOD icons color</string>
    <string name="pulse_ambient_light_category">Screen edge lighting</string>
    <string name="pulse_ambient_light_title">Show on new notifcation</string>
    <string name="pulse_ambient_light_summary">Show light pulse on new notification</string>
    <string name="ambient_notification_light_enabled_title">Show on always on</string>
    <string name="ambient_notification_light_enabled_summary">Show light pulse on new notification using always on</string>
    <string name="ambient_notification_light_color_title">Custom color</string>
    <string name="ambient_notification_light_color_summary">Default color for light pulse</string>
    <string name="ambient_notification_light_hide_aod_title">Only show light pulse</string>
    <string name="ambient_notification_light_hide_aod_summary">Hide all other display elements from always on</string>
    <string name="ambient_notification_light_timeout_title">Timeout for light pulse</string>
    <string name="ambient_notification_light_color_mode_title">Light pulse color</string>
    <string name="pulse_ambient_light_duration_title">Duration</string>
    <string name="pulse_ambient_light_duration_summary">Sets the ambient light animation duration</string>
    <string name="pulse_ambient_light_repeat_count_title">Edge Light Repeat count</string>
    <string name="pulse_ambient_light_repeat_count_summary">Set max repeat count. 0 for infinite</string>
</resources>