<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

   <PreferenceCategory
            android:title="@string/lockscreen_gestures">
	    <com.android.settings.custom.preference.SystemSettingSwitchPreference
	         android:key="double_tap_sleep_lockscreen"
	         android:title="@string/double_tap_sleep_lockscreen_title"
	         android:summary="@string/double_tap_sleep_lockscreen_summary"
	         android:defaultValue="true" />
	    </PreferenceCategory>

   <PreferenceCategory
            android:title="@string/ambient_settings">
    <Preference
        android:key="always_on_display_schedule"
        android:title="@string/always_on_display_schedule_title"
        android:fragment="com.raven.lair.fragments.AODSchedule" />

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="ambient_icons_lockscreen"
            android:title="@string/ambient_icons_lockscreen_title"
            android:summary="@string/ambient_icons_lockscreen_summary"
            android:defaultValue="false" />

        <com.android.settings.custom.preference.SystemSettingSeekBarPreference
            android:key="ambient_icons_size"
            android:title="@string/ambient_icons_size_title"
            android:dependency="ambient_icons_lockscreen"
            settings:allowEditText="true"
            android:max="80"
            android:min="0"
            settings:units="dp"
            settings:interval="1"
            android:defaultValue="80" />

        <com.android.settings.custom.colorpicker.ColorPickerPreference
            android:key="ambient_icons_color"
            android:title="@string/ambient_icons_color_title"
            android:dependency="ambient_icons_lockscreen"
            android:defaultValue="0xFFFFFFFF" />

            </PreferenceCategory>

    <PreferenceCategory
        android:key="pulse_ambient_light_category"
        android:title="@string/pulse_ambient_light_category" >

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="pulse_ambient_light"
            android:title="@string/pulse_ambient_light_title"
            android:summary="@string/pulse_ambient_light_summary"
            android:defaultValue="false" />

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="ambient_notification_light_enabled"
            android:title="@string/ambient_notification_light_enabled_title"
            android:summary="@string/ambient_notification_light_enabled_summary"
            android:defaultValue="false"
            android:persistent="false" />

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="ambient_notification_light_hide_aod"
            android:title="@string/ambient_notification_light_hide_aod_title"
            android:summary="@string/ambient_notification_light_hide_aod_summary"
            android:defaultValue="false"
            android:dependency="ambient_notification_light_enabled"/>

        <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="ambient_notification_light_timeout"
            android:dialogTitle="@string/ambient_notification_light_timeout_title"
            android:title="@string/ambient_notification_light_timeout_title"
            android:entries="@array/ambient_notification_light_timeout_entries"
            android:entryValues="@array/ambient_notification_light_timeout_values"
            android:defaultValue="0"
            android:dependency="ambient_notification_light_enabled"
            android:summary="%s" />

        <ListPreference
            android:key="ambient_notification_light_color_mode"
            android:title="@string/ambient_notification_light_color_mode_title"
            android:persistent="false"
            android:entries="@array/ambient_notification_light_color_mode_entries"
            android:entryValues="@array/ambient_notification_light_color_mode_values"
            android:defaultValue="2" />

        <com.android.settings.custom.colorpicker.ColorPickerPreference
            android:key="ambient_notification_light_color"
            android:summary="@string/ambient_notification_light_color_summary"
            android:title="@string/ambient_notification_light_color_title"
            ledPreview="true"
            settings:defaultColorValue="0xFF3980FF" />

        <com.android.settings.custom.preference.CustomSeekBarPreference
            android:key="notification_pulse_duration"
            android:title="@string/pulse_ambient_light_duration_title"
            android:summary="@string/pulse_ambient_light_duration_summary"
            android:persistent="false"
            android:defaultValue="2"
            android:max="10"
            settings:min="1"
            settings:units="sec"
            settings:interval="1"
            android:dependency="pulse_ambient_light" />

        <com.android.settings.custom.preference.CustomSeekBarPreference
            android:key="notification_pulse_repeats"
            android:title="@string/pulse_ambient_light_repeat_count_title"
            android:summary="@string/pulse_ambient_light_repeat_count_summary"
            android:persistent="false"
            android:defaultValue="0"
            android:max="10"
            settings:min="0"
            settings:interval="1"
            android:dependency="pulse_ambient_light" />

    </PreferenceCategory>

   <PreferenceCategory
            android:title="@string/misc">
            <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="lockscreen_battery_info"
            android:title="@string/lockscreen_battery_info_title"
            android:summary="@string/lockscreen_battery_info_summary"
            android:defaultValue="true" />

            <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="lockscreen_media_metadata"
            android:title="@string/lockscreen_media_art_title"
            android:summary="@string/lockscreen_media_art_summary"
            android:defaultValue="true" />

            <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="lockscreen_visualizer"
            android:title="@string/lockscreen_visualizer_title"
            android:defaultValue="true" />

            <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="lockscreen_charging_animation"
            android:dialogTitle="@string/lockscreen_charging_animation_title"
            android:title="@string/lockscreen_charging_animation_title"
            android:entries="@array/lockscreen_charging_animation_entries"
            android:entryValues="@array/lockscreen_charging_animation_values"
            android:summary="%s"
            android:defaultValue="1" />

            <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="hide_lockicon"
            android:title="@string/hide_lockicon_title"
            android:summary="@string/hide_lockicon_summary"
            android:defaultValue="true" />

            <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="lockscreen_status_bar"
            android:title="@string/lockscreen_status_bar_title"
            android:summary="@string/lockscreen_status_bar_summary"
            android:defaultValue="true" />

	    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/lock_screen_custom_clock_face_category">

        <ListPreference
            android:key="lock_screen_custom_clock_face"
            android:summary="%s"
            android:title="@string/lock_screen_custom_clock_face_title"
            android:entries="@array/lock_screen_custom_clock_face_entries"
            android:entryValues="@array/lock_screen_custom_clock_face_values" />
    </PreferenceCategory>

  <PreferenceCategory
	  android:title="@string/lockscreen_security">
	<com.android.settings.custom.preference.SystemSettingSwitchPreference
	android:key="fp_unlock_keystore"
        android:title="@string/fp_unlock_keystore_title"
        android:summary="@string/fp_unlock_keystore_summary"
	android:defaultValue="false" />

        <!-- FOD Customisations -->
        <Preference
            android:key="fod_tweaks"
            android:title="@string/fod_title"
            android:summary="@string/fod_summary"
            android:fragment="com.raven.lair.fragments.FodTweaks" /> 

        </PreferenceCategory>
</PreferenceScreen>
