<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 <PreferenceCategory
            android:title="@string/buttons">

            <PreferenceScreen
            android:title="@string/gestures_title"
            android:summary="@string/gestures_summary">
            <intent android:action="com.android.settings.GESTURE_NAVIGATION_SETTINGS" />
	        </PreferenceScreen>

	    <com.android.settings.custom.preference.SecureSettingSwitchPreference
	        android:key="advanced_reboot"
	        android:title="@string/global_actions_advanced_reboot_title" 
	        android:summary="@string/global_actions_advanced_reboot_summary"
	        android:defaultValue="false" />

	    <com.android.settings.custom.preference.SystemSettingSwitchPreference
                android:key="torch_long_press_power_gesture"
	        android:title="@string/torch_long_press_power_gesture_title"
	        android:summary="@string/torch_long_press_power_gesture_desc"
	        android:defaultValue="false" />

	    <ListPreference
	        android:key="torch_long_press_power_timeout"
	        android:dialogTitle="@string/torch_long_press_power_timeout_title"
	        android:title="@string/torch_long_press_power_timeout_title"
	        android:summary="%s"
	        android:entries="@array/torch_long_press_power_timeout_entries"
	        android:entryValues="@array/torch_long_press_power_timeout_values"
	        android:dependency="torch_long_press_power_gesture"
	        android:persistent="false" />

	</PreferenceCategory>

<PreferenceCategory
            android:title="@string/vol_buttons">
             <com.android.settings.custom.preference.SystemSettingSwitchPreference
	       android:key="volume_button_music_control"
	       android:summary="@string/volume_rocker_music_controls_summary"
               android:title="@string/volume_rocker_music_controls_title"
	       android:defaultValue="false" />

	    <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="click_partial_screenshot"
            android:title="@string/click_partial_screenshot_title"
            android:summary="@string/click_partial_screenshot_summary"
            android:defaultValue="false" />
    
             <com.android.settings.custom.preference.SystemSettingListPreference
	    android:key="systemui_plugin_volume"
            android:title="@string/volume_panel"
            android:entries="@array/volume_panel_entries"
            android:entryValues="@array/volume_panel_values"
            android:defaultValue="@string/volume_panel_stock_val" />

        </PreferenceCategory>
</PreferenceScreen>
