<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
            android:title="@string/statusbar_icon">
	     
	    <com.corvus.support.preferences.SystemSettingSwitchPreference
        	android:key="show_volte_icon"
        	android:title="@string/volte_switch_title"
        	android:summary="@string/volte_switch_summary"
		    android:defaultValue="true" />
		    
	    <com.corvus.support.preferences.SystemSettingListPreference
         	android:key="volte_icon_style"
         	android:title="@string/volte_icon_style_title"
         	android:entries="@array/volte_icon_type_entries"
         	android:entryValues="@array/volte_icon_type_values"
         	android:summary="%s"
		android:defaultValue="0"
		android:dependency="show_volte_icon"/>

    	    <com.corvus.support.preferences.SystemSettingListPreference
         	android:key="vowifi_icon"
         	android:title="@string/vowifi_icon_title"
         	android:entries="@array/vowifi_icon_entries"
         	android:entryValues="@array/vowifi_icon_values"
         	android:summary="%s"
		android:defaultValue="0"/>

	    <com.corvus.support.preferences.SystemSettingListPreference
         	android:key="vowifi_icon_style"
         	android:title="@string/vowifi_icon_style_title"
         	android:entries="@array/vowifi_icon_style_entries"
         	android:entryValues="@array/vowifi_icon_style_values"
         	android:summary="%s"
         	android:defaultValue="0"/>

	    <ListPreference
	        android:key="status_bar_battery_style"
	        android:title="@string/status_bar_battery_style_title"
        	android:summary="%s"
	        android:dialogTitle="@string/status_bar_battery_style_title"
	        android:entries="@array/status_bar_battery_style_entries"
	        android:entryValues="@array/status_bar_battery_style_values"
	        android:defaultValue="0" />

	    <ListPreference
	        android:key="status_bar_show_battery_percent"
	        android:title="@string/battery_percent_title"
	        android:dialogTitle="@string/battery_percent_title"
	        android:entries="@array/battery_percent_entries"
	        android:entryValues="@array/battery_percent_values"
	        android:defaultValue="0" />

	<com.corvus.support.preferences.SystemSettingSwitchPreference
            android:key="statusbar_clock"
            android:title="@string/status_bar_clock_show"
            android:defaultValue="true" />

        <ListPreference
            android:key="statusbar_clock_style"
            android:title="@string/status_bar_clock_style_title"
            android:dialogTitle="@string/status_bar_clock_style_title"
            android:entries="@array/status_bar_clock_style_entries"
            android:entryValues="@array/status_bar_clock_style_values"
            android:dependency="statusbar_clock" />

        <ListPreference
            android:key="statusbar_am_pm"
            android:title="@string/status_bar_am_pm_title"
            android:dialogTitle="@string/status_bar_am_pm_title"
            android:entries="@array/status_bar_am_pm_entries"
            android:entryValues="@array/status_bar_am_pm_values"
            android:dependency="statusbar_clock" />

        <com.corvus.support.preferences.SystemSettingSwitchPreference
            android:key="statusbar_clock_seconds"
            android:title="@string/clock_seconds_display"
            android:dependency="statusbar_clock"
            android:defaultValue="false" />

<ListPreference
            android:key="clock_date_display"
            android:title="@string/clock_date_display"
            android:summary="@string/clock_date_display_summary"
            android:entries="@array/clock_date_display_entries"
            android:entryValues="@array/clock_date_display_values"
            android:dependency="statusbar_clock" />

        <ListPreference
            android:key="clock_date_style"
            android:title="@string/clock_date_style"
            android:entries="@array/clock_date_style_entries"
            android:entryValues="@array/clock_date_style_values"
            android:dependency="clock_date_display" />

        <ListPreference
            android:key="clock_date_format"
            android:title="@string/clock_date_format"
            android:entries="@array/clock_date_format_entries_values"
            android:entryValues="@array/clock_date_format_entries_values"
            android:dependency="clock_date_display" />

        <ListPreference
            android:key="statusbar_clock_date_position"
            android:title="@string/clock_date_position"
            android:entries="@array/clock_date_position_entries"
            android:entryValues="@array/clock_date_position_values"
            android:dependency="clock_date_display" />

	</PreferenceCategory>

<PreferenceCategory
            android:title="@string/statusbar_gestures">
	    <com.corvus.support.preferences.SystemSettingSwitchPreference
	         android:key="double_tap_sleep_gesture"
	         android:title="@string/double_tap_to_sleep_title"
	         android:summary="@string/double_tap_to_sleep_summary"
	         android:defaultValue="true" />
	</PreferenceCategory>

</PreferenceScreen>
